[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/config/ScreenScrapperSettings.gd" type="Script" id=1]
[ext_resource path="res://assets/icons/visibility_visible.svg" type="Texture2D" id=2]
[ext_resource path="res://assets/icons/visibility_hidden.svg" type="Texture2D" id=3]
[ext_resource path="res://assets/fonts/NotoSans-BoldItalic.ttf" type="FontFile" id=4]
[ext_resource path="res://assets/fonts/NotoSans-Regular.ttf" type="FontFile" id=5]
[ext_resource path="res://assets/fonts/NotoSans-Italic.ttf" type="FontFile" id=6]
[ext_resource path="res://assets/fonts/NotoSans-Bold.ttf" type="FontFile" id=7]
[ext_resource path="res://scenes/ui_nodes/AccessibilityFocus.gd" type="Script" id=8]

[sub_resource type="FontFile" id=2]
size = 14
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="FontFile" id=1]
size = 14
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="FontFile" id=3]
size = 14
use_mipmaps = true
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="FontFile" id=4]
size = 14
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[node name="ScreenScrapperSettings" type="VBoxContainer"]
offset_right = 1024.0
offset_bottom = 173.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_right = 1024.0
offset_bottom = 40.0
tooltip_text = "Whether to use a custom account for ScreenScraper. If the
maximum amount of daily requests is hit, RetroHub can no
longer scrape media.
If that happens, create an account on ScreenScraper and
nsert the details here to use your personal daily quota
instead."
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer"]
offset_top = 13.0
offset_right = 944.0
offset_bottom = 27.0
size_flags_horizontal = 3
text = "Use custom account?"

[node name="AccessibilityFocus" type="Node" parent="HBoxContainer/Label"]
script = ExtResource( 8 )

[node name="UseAccount" type="CheckButton" parent="HBoxContainer"]
unique_name_in_owner = true
offset_left = 948.0
offset_right = 1024.0
offset_bottom = 40.0

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
offset_top = 44.0
offset_right = 1024.0
offset_bottom = 74.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer2"]
offset_top = 8.0
offset_right = 720.0
offset_bottom = 22.0
size_flags_horizontal = 3
text = "Username:"

[node name="AccessibilityFocus" type="Node" parent="HBoxContainer2/Label"]
script = ExtResource( 8 )

[node name="Username" type="LineEdit" parent="HBoxContainer2"]
unique_name_in_owner = true
offset_left = 724.0
offset_right = 1024.0
offset_bottom = 30.0
custom_minimum_size = Vector2( 300, 30 )
editable = false
clear_button_enabled = true
placeholder_text = "Username"
caret_blink = true
caret_blink_interval = 0.5

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
offset_top = 78.0
offset_right = 1024.0
offset_bottom = 108.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer3"]
offset_top = 8.0
offset_right = 686.0
offset_bottom = 22.0
size_flags_horizontal = 3
text = "Password:"

[node name="AccessibilityFocus" type="Node" parent="HBoxContainer3/Label"]
script = ExtResource( 8 )

[node name="ShowPassword" type="TextureButton" parent="HBoxContainer3"]
offset_left = 690.0
offset_right = 720.0
offset_bottom = 30.0
custom_minimum_size = Vector2( 30, 30 )
focus_mode = 0
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
expand = true

[node name="Password" type="LineEdit" parent="HBoxContainer3"]
unique_name_in_owner = true
offset_left = 724.0
offset_right = 1024.0
offset_bottom = 30.0
custom_minimum_size = Vector2( 300, 30 )
editable = false
secret = true
clear_button_enabled = true
placeholder_text = "Password"
caret_blink = true
caret_blink_interval = 0.5

[node name="HBoxContainer4" type="HBoxContainer" parent="."]
offset_top = 112.0
offset_right = 1024.0
offset_bottom = 172.0

[node name="Label" type="RichTextLabel" parent="HBoxContainer4"]
offset_left = 724.0
offset_right = 1024.0
offset_bottom = 60.0
custom_minimum_size = Vector2( 300, 60 )
size_flags_horizontal = 10
theme_override_fonts/bold_italics_font = SubResource( 2 )
theme_override_fonts/italics_font = SubResource( 1 )
theme_override_fonts/bold_font = SubResource( 3 )
theme_override_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
text = "[img=20]assets/icons/warning.svg[/img][i][b] Warning: [/b]Due to the way ScreenScraper works, the password will be stored in plaintext.[/i]"
text = " Warning: Due to the way ScreenScraper works, the password will be stored in plaintext."
fit_content_height = true
scroll_active = false

[node name="AccessibilityFocus" type="Node" parent="HBoxContainer4/Label"]
script = ExtResource( 8 )

[node name="HBoxContainer5" type="HBoxContainer" parent="."]
offset_top = 176.0
offset_right = 1024.0
offset_bottom = 206.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer5"]
offset_top = 8.0
offset_right = 708.0
offset_bottom = 22.0
size_flags_horizontal = 3
text = "Scraper maximum thread count:"

[node name="AccessibilityFocus" type="Node" parent="HBoxContainer5/Label"]
script = ExtResource( 8 )

[node name="ThreadCountLabel" type="Label" parent="HBoxContainer5"]
unique_name_in_owner = true
offset_left = 712.0
offset_top = 8.0
offset_right = 720.0
offset_bottom = 22.0
text = "1"

[node name="ThreadCount" type="HSlider" parent="HBoxContainer5"]
unique_name_in_owner = true
offset_left = 724.0
offset_right = 1024.0
offset_bottom = 30.0
custom_minimum_size = Vector2( 300, 30 )
min_value = 2.0
max_value = 11.0
value = 2.0
tick_count = 10
ticks_on_borders = true

[connection signal="toggled" from="HBoxContainer/UseAccount" to="." method="_on_UseAccount_toggled"]
[connection signal="text_changed" from="HBoxContainer2/Username" to="." method="_on_text_changed"]
[connection signal="toggled" from="HBoxContainer3/ShowPassword" to="." method="_on_ShowPassword_toggled"]
[connection signal="text_changed" from="HBoxContainer3/Password" to="." method="_on_text_changed"]
[connection signal="value_changed" from="HBoxContainer5/ThreadCount" to="." method="_on_ThreadCount_value_changed"]
